# EVpi-embedded

./: .gitmodules  README.md  can.py  get_socketio_data.py  install_ros2_foxy_rpi.sh
evpi_bringup/: CMakeLists.txt  package.xml
evpi_bringup/config/: can_table.yaml  ps3.config.yaml
evpi_bringup/include/evpi_bringup/: can_manager.hpp
evpi_bringup/launch/: can_bringup.launch.xml  can_manager.launch.py  teleop.launch.py  topic_sumylator.launch.py
evpi_bringup/src/: can_manager.cpp  topic_simulator.cpp
evpi_bringup/startup_service/: 80-can.network  README.md  evpi.service  setup.sh
ros2_socketcan/src/: socket_can_receiver_node.cpp  socket_can_sender_node.cpp
