<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evpi_bringup</name>
  <version>0.0.0</version>
  <description>
    The evpi_bringup package provides launch scripts for starting the sensors
  </description>
  <maintainer email="vincy@mit.edu">vincy xiao</maintainer>
  <license>WTFPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
